manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  namespace: web-app4
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: httpd:latest # Imagen de ejemplo, puedes usar cualquier imagen de servidor web
          volumeMounts:
            - name: ebs-storage
              mountPath: /usr/local/apache2/htdocs/ebs
      volumes:
        - name: ebs-storage
          persistentVolumeClaim:
            claimName: ebs-pvc
