manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: web-app3
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
